--- a/beatblender/src/components/NavbarStyles.css
+++ b/beatblender/src/components/NavbarStyles.css
@@ -1,4 +1,5 @@
 .NavbarItems {
+    background-color: #fff;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -13,13 +14,6 @@
     z-index: 9999;
 }
 
-
-.navbar-logo {
-    color: #222;
-    font-size: 2rem;
-    cursor: pointer;
-}
-
 .nav-menu {
     display:grid;
     grid-template-columns: repeat(6, auto);
@@ -27,6 +21,18 @@
     list-style: none;
     align-items: center;
 }
+
+.navbar-logo {
+    color: #222;
+    font-size: 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 250px;
+    padding: 2.7rem 0 1rem 0;
+}
+
+
 
 .nav-links {
 text-decoration: none;
@@ -93,7 +99,8 @@ button:hover {
        align-items: stretch;
        padding: 80px 0 30px 0;
        margin: 0;
-       
+       transition: 0.3s ease-in-out;
+       border-radius: 13px;
     }
 
     .nav-menu.active {
