--- a/beatblender/src/components/HeroStyles.css
+++ b/beatblender/src/components/HeroStyles.css
@@ -17,7 +17,7 @@
 
 .hero-text {
     position: absolute;
-    top: 80%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
@@ -28,7 +28,7 @@
 .hero-text h1 {
     font-size: 4rem;
     font-weight: 800;
-    background: #222;
+    background: #fff;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }   
